--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,41 @@
-#form {
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display+SC');
+
+#Form {
 	display: inline-block;
+	text-align: center;
+	font-family: 'Playfair Display SC', serif;
+	font-size: 16px;
+	margin-top: 20px;
+	margin-left: 340px;
+}
+
+#from {
+	text-align: center;
+	margin-right: 5px;
+	margin-left: 5px;
+}
+
+#to {
+    margin-left: 5px;
 	text-align: center;
 }
 
 h1, h2 {
 	text-align: center;
+	font-family: 'Playfair Display SC', serif;
 }
+
+h1 {
+	font-size: 24px;
+}
+
+h2 {
+	font-size: 20px;
+}
+
+.Search {
+	margin-left: 5px;
+}
+
+
+
