--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 	font-family: 'Playfair Display SC', serif;
 	font-size: 16px;
 	margin-top: 20px;
-	margin-left: 340px;
+	margin-left: 390px;
 	margin-bottom: 20px;
 }
 
@@ -67,22 +67,52 @@ body{
 	background-color: #D3D3D3;
 }
 
-@media only screen and (max-width: 960px) {
-	#Form {
-		margin-left: 55px;
-	}
-}
-
 @media only screen and (max-width: 640px) {
+	h1, h2 {
+		margin-left: 40px;
+	}
 	#to, #from {
-		display: block; 
+		display: block;
+	}
+	#Form {
+		margin-left: 140px;
+	}
+	.Search {
+		margin-top: 5px;
 	}
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 320px) {
+	h1, h2 {
+		margin-left: 40px;
+	}
+	#to, #from {
+		display: block;
+	}
+	#Form {
+		margin-left: 110px;
+	}
+	.Search {
+		margin-top: 5px;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	#Form {
+		margin-left: 110px;
+	}
+}
+
+@media only screen and (min-width: 1024px) {
+	#Form {
+		margin-left: 220px;
+	}
+}
+
+@media only screen and (min-width: 1280px) {
 
 	#Form {
-		margin-left: 100px;
+		margin-left: 390px;
 	}
 }
 
