--- a/css/index.css
+++ b/css/index.css
@@ -44,10 +44,8 @@ h2 {
 	font-size: 14px;
 	height: 25px;
 	border-radius: 3px;
-}
-
-div {
-	background-color: #b5b5b5;
+	background-color: #ccc;
+	width: 70px;
 }
 
 #header_container {
