--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,10 @@ body{
 	.Search {
 		margin-top: 5px;
 	}
+
+	p {
+		width: 250px;
+	}
 }
 
 @media only screen and (max-width: 320px) {
@@ -119,6 +123,10 @@ body{
 
 	#Form {
 		margin-left: 390px;
+	}
+
+	p {
+		width: 500px;
 	}
 }
 
