--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,10 @@ body{
 	background-color: #b5b5b5;
 }
 
+.aDiv {
+	float: left;
+}
+
 @media only screen and (max-width: 640px) {
 	h1, h2 {
 		margin-left: 40px;
@@ -90,6 +94,14 @@ body{
 	p {
 		width: 250px;
 	}
+
+	body {
+		width: 450px;
+	}
+
+	.box {
+		width: 400px;
+	}
 }
 
 @media only screen and (max-width: 320px) {
@@ -104,6 +116,13 @@ body{
 	}
 	.Search {
 		margin-top: 5px;
+	}
+	body {
+		width: 450px;
+	}
+
+	.box {
+		width: 400px;
 	}
 }
 
