--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,8 @@ h2 {
 
 #news_container {
 	padding: 30px;
+	width: 65%;
+    margin: 0 auto;
 }
 
 p {
@@ -71,6 +73,11 @@ a {
 
 body{
 	background-color: #b5b5b5;
+}
+
+.is-64x64 {
+	height: 200px;
+	width: 200px;
 }
 
 @media only screen and (max-width: 640px) {
@@ -122,7 +129,9 @@ body{
 @media only screen and (min-width: 1280px) {
 
 	#Form {
-		margin-left: 390px;
+		margin: 0 auto;
+    	width: 50%;
+    	display: block;
 	}
 
 	p {
