--- a/css/index.css
+++ b/css/index.css
@@ -74,12 +74,7 @@ body{
 	background-color: #b5b5b5;
 }
 
-.is-64x64 {
-	height: 200px;
-	width: 200px;
-}
-
-@media only screen and (max-width: 640px) {
+@media only screen and (min-width: 640px) {
 	h1, h2 {
 		margin-left: 40px;
 	}
@@ -92,9 +87,18 @@ body{
 	.Search {
 		margin-top: 5px;
 	}
+	.media {
+		display: none;
+	}
+	#news_container {
+		width: 85%
+	}
+	html {
+		min-width: 780px;
+	}
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (min-width: 320px) {
 	h1, h2 {
 		margin-left: 40px;
 	}
@@ -107,17 +111,44 @@ body{
 	.Search {
 		margin-top: 5px;
 	}
+	.media {
+		display: none;
+	}
+	#news_container {
+		width: 85%
+	}
+	html {
+		min-width: 780px;
+	}
 }
 
 @media only screen and (min-width: 768px) {
 	#Form {
 		margin-left: 110px;
 	}
+	.media {
+		display: none;
+	}
+	#news_container {
+		width: 75%
+	}
+	html {
+		min-width: 780px;
+	}
 }
 
 @media only screen and (min-width: 1024px) {
 	#Form {
 		margin-left: 220px;
+	}
+	.media {
+		display: none;
+	}
+	#news_container {
+		width: 75%
+	}
+	html {
+		min-width: 780px;
 	}
 }
 
@@ -127,6 +158,11 @@ body{
 		margin: 0 auto;
     	display: block;
 	}
+	#news_container {
+		padding: 30px;
+		width: 65%;
+    	margin: 0 auto;
+}
 
 }
 
