--- a/css/index.css
+++ b/css/index.css
@@ -5,47 +5,57 @@
 	padding: 0;
 }
 
+
 #Form {
 	display: inline-block;
 	text-align: center;
-	font-family: 'Playfair Display SC', serif;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 16px;
 	margin-top: 20px;
 	margin-left: 390px;
 	margin-bottom: 20px;
+	color: white;
 }
 
 #from {
 	text-align: center;
-	margin-right: 8px;
 	margin-left: 8px;
+	padding: 2px;
+	margin-bottom: 10px;
 }
 
 #to {
     margin-left: 8px;
 	text-align: center;
+	padding: 2px;
 }
 
 h1, h2 {
 	text-align: center;
 	font-family: 'Playfair Display SC', serif;
+	color: white;
 }
 
 h1 {
-	font-size: 24px;
+	font-size: 28px;
+	margin-top: 30px;
 }
 
 h2 {
-	font-size: 20px;
+	font-size: 18px;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .Search {
 	margin-left: 5px;
 	font-size: 14px;
-	height: 25px;
+	height: 27px;
 	border-radius: 3px;
 	background-color: #ccc;
 	width: 70px;
+	border: none;
+	cursor: pointer;
+	margin-top: 10px;
 }
 
 #header_container {
@@ -60,13 +70,19 @@ h2 {
 
 p {
 	margin-bottom: 15px;
-	font-size: 16px;
-    margin: auto;
+	margin: auto;
     text-align: left;
+}
+
+.errorSection {
+	text-align: center;
+    color: white;
+    font-size: 20px;
 }
 
 .explanation {
 	width: 50%;
+	margin-bottom: 8px;
 }
 
 a {
@@ -74,9 +90,22 @@ a {
 	font-weight: bold;
 }
 
-body{
-	background-color: #b5b5b5;
+body, html{
+	background-color: #4a4a4a;
 }
+
+i {
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-left: 7px;
+}
+
+.arrow{
+	 transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+   }
 
 @media only screen and (max-width: 640px) {
 	h1, h2 {
@@ -84,12 +113,16 @@ body{
 	}
 	#to, #from {
 		display: block;
+		padding: 2px;
 	}
 	#Form {
-		margin-left: 150px;
+		margin-left: 37%;
 	}
 	.Search {
 		margin-top: 5px;
+		border: none;
+		margin-left: -5px;
+		margin-top: 10px;
 	}
 	#news_container {
 		width: 100%;
@@ -102,9 +135,10 @@ body{
 	}
 	#to, #from {
 		display: block;
+		padding: 2px;
 	}
 	#Form {
-		margin-left: 280px;
+		margin-left: 43%;
 	}
 	.Search {
 		margin-top: 5px;
@@ -115,20 +149,53 @@ body{
 	#news_container {
 		width: 75%;
 	}
+	.Search {
+	margin-left: -11px;
+	font-size: 14px;
+	height: 25px;
+	border-radius: 3px;
+	background-color: #ccc;
+	width: 70px;
+	border: none;
+	margin-top: 10px;
+	}
 }
 
 @media only screen and (min-width: 768px) {
 	#Form {
-		margin-left: 110px;
+		margin-left: 310px;
+		width: 20%;
 	}
 	.content {
 		width: 80%;
+	}
+	.Search {
+	margin-left: 5px;
+	font-size: 14px;
+	height: 25px;
+	border-radius: 3px;
+	background-color: #ccc;
+	width: 70px;
+	border: none;
+	margin-top: 10px;
 	}
 }
 
 @media only screen and (min-width: 1024px) {
 	#Form {
-		margin-left: 220px;
+		margin-left: 440px;
+		width: 12%;
+		margin-top: 40px;
+	}
+	.Search {
+	margin-left: 5px;
+	font-size: 14px;
+	height: 25px;
+	border-radius: 3px;
+	background-color: #ccc;
+	width: 70px;
+	border: none;
+	margin-top: 10px;
 	}
 	
 }
@@ -138,6 +205,19 @@ body{
 	#Form {
 		margin: 0 auto;
     	display: block;
+    	width: 12%;
+    	margin-top: 40px;
+	}
+
+	.Search {
+	margin-left: 5px;
+	font-size: 14px;
+	height: 25px;
+	border-radius: 3px;
+	background-color: #ccc;
+	width: 70px;
+	border: none;
+	margin-top: 10px;
 	}
 
 }
