--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,8 @@ h2 {
 	border: none;
 	cursor: pointer;
 	margin-top: 10px;
+	transform: scale(1);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 }
 
 #header_container {
@@ -89,6 +91,7 @@ a {
 	font-size: 16px;
 	font-weight: bold;
 	transform: scale(1);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 }
 
 body, html{
@@ -108,13 +111,13 @@ i {
     -webkit-transform: rotate(-45deg);
    }
   a:hover {
-	transition: all 200ms ease-in;
-	transform: scale(1.1); 
+	box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  	transition: box-shadow 0.3s ease-in-out;
 	}	
 
 .Search:hover {
-	transition: all 200ms ease-in;
-	transform: scale(1.1); 
+	box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  	transition: box-shadow 0.3s ease-in-out;
 	}
 
 @media only screen and (max-width: 640px) {
@@ -228,16 +231,7 @@ i {
 	width: 70px;
 	border: none;
 	margin-top: 10px;
-	}
-	a:hover {
-	transition: all 200ms ease-in;
-	transform: scale(1.1); 
 	}	
-
-	.Search:hover {
-	transition: all 200ms ease-in;
-	transform: scale(1.1); 
-	}
 
 }
 
