--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,12 @@ i {
   	transition: box-shadow 0.3s ease-in-out;
 	}
 
+.image img {
+	display: block;
+	height: inherit;
+	width: 100%;
+}
+
 @media only screen and (max-width: 640px) {
 	h1, h2 {
 		margin-left: 40px;
@@ -218,7 +224,7 @@ i {
 	#Form {
 		margin: 0 auto;
     	display: block;
-    	width: 12%;
+    	width: 10%;
     	margin-top: 40px;
 	}
 
