--- a/css/index.css
+++ b/css/index.css
@@ -6,17 +6,6 @@
 }
 
 
-#Form {
-	display: inline-block;
-	text-align: center;
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-size: 16px;
-	margin-top: 20px;
-	margin-left: 390px;
-	margin-bottom: 20px;
-	color: white;
-}
-
 #from {
 	text-align: center;
 	margin-left: 8px;
@@ -139,8 +128,15 @@ i {
 		padding: 2px;
 	}
 	#Form {
-		margin-left: 32%;
-	}
+	display: inline-block;
+	text-align: center;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 16px;
+	margin-top: 20px;
+	margin-left: 32%;
+	margin-bottom: 20px;
+	color: white;
+}
 	.Search {
 		margin-top: 5px;
 		border: none;
@@ -161,8 +157,15 @@ i {
 		padding: 2px;
 	}
 	#Form {
-		margin-left: 43%;
-	}
+	display: inline-block;
+	text-align: center;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 16px;
+	margin-top: 20px;
+	margin-left: 43%;
+	margin-bottom: 20px;
+	color: white;
+}
 	.Search {
 		margin-top: 5px;
 	}
@@ -195,8 +198,15 @@ i {
 
 @media only screen and (min-width: 768px) {
 	#Form {
-		margin-left: 310px;
-		width: 20%;
+	display: inline-block;
+	text-align: center;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 16px;
+	margin-top: 20px;
+	margin-left: 310px;
+	width: 20%;
+	margin-bottom: 20px;
+	color: white;
 	}
 	.content {
 		width: 80%;
@@ -220,9 +230,15 @@ i {
 
 @media only screen and (min-width: 1024px) {
 	#Form {
-		margin-left: 440px;
-		width: 12%;
-		margin-top: 40px;
+	display: inline-block;
+	text-align: center;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 16px;
+	margin-top: 40px;
+	margin-left: 440px;
+	width: 12%;
+	margin-bottom: 20px;
+	color: white;
 	}
 	.Search {
 	margin-left: 5px;
@@ -244,6 +260,19 @@ i {
     	display: block;
     	width: 10%;
     	margin-top: 40px;
+	}
+	#Form {
+	display: inline-block;
+	text-align: center;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 16px;
+	margin-left: 390px;
+	margin-bottom: 20px;
+	margin: 0 auto;
+    display: block;
+    width: 10%;
+    margin-top: 40px;
+	color: white;
 	}
 
 	.Search {
