--- a/css/index.css
+++ b/css/index.css
@@ -119,36 +119,8 @@ i {
 	width: 100%;
 }
 
-@media only screen and (max-width: 640px) {
-	h1, h2 {
-		margin-left: 0px;
-	}
-	#to, #from {
-		display: block;
-		padding: 2px;
-	}
-	#Form {
-	display: inline-block;
-	text-align: center;
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-size: 16px;
-	margin-top: 20px;
-	margin-left: 32%;
-	margin-bottom: 20px;
-	color: white;
-}
-	.Search {
-		margin-top: 5px;
-		border: none;
-		margin-left: -5px;
-		margin-top: 10px;
-	}
-	#news_container {
-		width: 100%;
-	}
-}
 
-@media only screen and (max-width: 320px) {
+@media only screen and (min-width: 320px) {
 	h1, h2 {
 		margin-left: 0px;
 	}
@@ -165,7 +137,7 @@ i {
 	margin-left: 43%;
 	margin-bottom: 20px;
 	color: white;
-}
+	}
 	.Search {
 		margin-top: 5px;
 	}
@@ -185,16 +157,47 @@ i {
 	border: none;
 	margin-top: 10px;
 	}
+}
 
 
 
-@media only screen and (max-width: 414px) {
+@media only screen and (min-width: 414px) {
 	#header_container {
 	margin-top: 0;
 	margin: 1 -5%;
 	width: 100%;
 	}	
 }
+
+@media only screen and (min-width: 640px) {
+	h1, h2 {
+		margin-left: 0px;
+	}
+	#to, #from {
+		display: block;
+		padding: 2px;
+	}
+	#Form {
+	display: inline-block;
+	text-align: center;
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 16px;
+	margin-top: 20px;
+	margin-left: 32%;
+	margin-bottom: 20px;
+	color: white;
+	}
+	.Search {
+		margin-top: 5px;
+		border: none;
+		margin-left: -5px;
+		margin-top: 10px;
+	}
+	#news_container {
+		width: 100%;
+	}
+}
+
 
 @media only screen and (min-width: 768px) {
 	#Form {
